# python-blackjack

./: main.py  pyproject.toml
