[tool.poetry]
name = "repl_nix_blackjack-start"
version = "0.1.0"
description = ""
authors = ["jananpatel2002 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
clear = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
